--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech Careers</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Tech Careers</h1>
@@ -11,10 +12,10 @@
     <p>An e-commerce analyst evaluates online sales data, website performance, and customer behavior to identify trends, optimize user experience,
          and develop strategies to increase revenue and improve the effectiveness of e-commerce platforms. 
         </p>
+        <a class="more-info" href="job1info.html">More info</a>
     <h2>Tech Support Specialist</h2>
     <p>A tech support specialist performs a range of tasks, from installing software to setting up computer workspaces, and solves technical issues that arise on a daily basis.
 
 </p>    
-<a href="job1info.html">More info</a>
 </body>
 </html>
